# newmonkey

./: LICENCE  README.md  pyproject.toml
src/newmonkey/: __main__.py  cli.py  main.py  parsing.py
