[project]
name = "newmonkey"
version = "1.0.2"
description = "A cli tool to convert your discord cache back to the original files."
authors = [
    {name = "CallMePixelMan", email = ""},
]
dependencies = [
    "python-magic>=0.4.27",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/CallMePixelMan/newmonkey"

[project.scripts]
newmonkey = "newmonkey.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
